--- a/inst/notebooks/03-Interactive-Maps.Rmd
+++ b/inst/notebooks/03-Interactive-Maps.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(dev = 'svg')
 options(device = function(file, width, height) {
   svg(tempfile(), width = width, height = height)
 })
+library(magrittr)
 ```
 
 This document introduces various techniques for making interactive maps from spatial data.
