--- a/inst/presentations/04-Spatial_Data_Operations.Rmd
+++ b/inst/presentations/04-Spatial_Data_Operations.Rmd
@@ -27,6 +27,7 @@ options(device = function(file, width, height) {
   svg(tempfile(), width = width, height = height)
 })
 knitr::opts_chunk$set(cache = TRUE)
+library(magrittr)
 ```
 
 # Selectiing features/fields `sp` objects
