--- a/inst/presentations/05-Ways_to_Output_Maps.Rmd
+++ b/inst/presentations/05-Ways_to_Output_Maps.Rmd
@@ -23,6 +23,7 @@ editor_options:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(cache = TRUE)
+library(magrittr)
 ```
 
 # Options to Display Maps
