--- a/inst/presentations/02-R_Packages.Rmd
+++ b/inst/presentations/02-R_Packages.Rmd
@@ -21,7 +21,7 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(cache = TRUE)
-
+library(magrittr)
 ```
 
 # Part2: R Packages
