smaple -> sample (could be 'simple'?)
Thanks for sharing these wonderful slides!

--- a/inst/presentations/03-Spatial_Data.Rmd
+++ b/inst/presentations/03-Spatial_Data.Rmd
@@ -83,7 +83,7 @@ class: inverse center middle
 
 ---
 
-# A smaple `sp` Object
+# A sample `sp` Object
 
 ```{r sp-01}
 suppressPackageStartupMessages(library(sp))
