--- a/inst/index.Rmd
+++ b/inst/index.Rmd
@@ -2,106 +2,164 @@
 title: "GeoSpatial Data Visualization in R"
 author: "Bhaskar V. Karambelkar"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{GeoSpatial Data Visualization in R}
-  %\VignetteEncoding{UTF-8}
+output:
+  prettydoc::html_pretty:
+    theme: cayman
+    highlight: github
 ---
 
-#### Code and Slides
+## Introduction
 
-All the code and slides will be made available on my [user2017.geodataviz](https://github.com/bhaskarvk/user2017.geodataviz) github repo before July 3<sup>rd</sup>, 2017.
+The goal of user2017.geodataviz is to privide a comprehensive overview of the options available in the R language for Geospatial data visualization. This was presented at [useR! 2017](https://user2017.brussels/) as a tutorial titled [Geospatial visualization using R](https://www.user2017.brussels/uploads/BhaskarKarambelkar.html).
+
+This tutorial covers ...
+
+- R Packages for Spatial Analysis in R
+
+- Data Structures for Spatial Data in R
+
+- Operations Supported on Spatial Data
+
+- Visualizing Spatial Data...
+	* Using Base Graphics
+	* Using `ggplot2` and helper packages
+	* Using `shiny` for dynamic mapping
+	* Using `leaflet` and related packages for interactive maps.
+	* Using specialized packages such as `tmap`, `choroplethr`, `ggmap`, `plotly`, `highcharter` etc.
+
+I will add more and more samples as time progresses so keep a tab on this repository from time to time.
+
+## Slides and R Notebooks
+
+The tutorial overview, the slides, and the R Notebooks can be found [here](https://bhaskarvk.github.io/user2017.geodataviz/).
+
+## Installation
+
+### The Docker Way
+
+The easiest option is using a docker image built specifically for this tutorial.
+
+- Install [docker](https://store.docker.com/search?type=edition&offering=community), and [docker toolbox](https://www.docker.com/products/docker-toolbox) (only for Windows and Mac).
+
+- Either using the [kitematic](https://kitematic.com/) GUI tool or command line pull the `bhaskarvk/rgeodataviz` image.<br/>Command line: `docker pull bhaskarvk/rgeodataviz`
+
+For the interested the docker image was built on top of [rocker](https://github.com/rocker-org/rocker).
+
+### Manually
+
+This tutorial is also an R package which enables you to pull in all the packages needed to run this tutorial. You can install all the needed packages simply by installing this package.
+
+First start by cloning this git repository, or better yet fork this repository on github and pull your fork. That way you can push changes to your fork.
+
+```bash
+git clone https://github.com/bhaskarvk/user2017.geodataviz
+# OR git pull <your forked repository>
+cd user2017.geodataviz
+```
+
+Next start `R` in this directory, and install this package and all its dependencies.
+
+```{r, eval=FALSE}
+if(!require("devtools")) {
+  install.packages("devtools")
+}
+devtools::install(dependencies="Suggests")
+```
+
+That should pull in all the packages required, but be aware of the following points...
+
+- The docker image has some more extra packages that were not used in the tutorial but available for you to use.
+- The list of packages is quite big so installation can be slow.
+- Some packages have dependencies on external libraries which you will need to install, otherwise the packages won't compile if being built from source. The docker image comes with these packages pre-installed.
+
+## Up and Running
+
+If you are using docker, then run the following command.
+
+```bash
+docker run -d -p 8787:8787 --name rgeodataviz bhaskarvk/rgeodataviz
+```
+
+This will start the docker container and you can connect to the Rstudio session using the URL 'http://localhost:8787', the userid/password are `rstudio/rstudio`.
+
+If you are running in a local environment you can simply open the `user2017.geodataviz.Rproj` file from the `user2017.geodataviz` directory which you checked-out using git above.
+
+To stop and subsequently start the container again use
+
+```bash
+docker stop rgeodataviz
+docker start rgeodataviz
+```
+
+Occasionally I will be pushing updates to the docker image. If you want the latest docker image you will have to destroy the existing container, pull the latest image and rerun the container.
+
+```bash
+docker stop rgeodataviz
+docker container rm rgeodataviz
+docker pull bhaskarvk/rgeodataviz
+docker run -d -p 8787:8787 --name rgeodataviz bhaskarvk/rgeodataviz
+```
+
+Destroying the container (`docker container rm`) will delete any data or files you may have changed, so back them up somewhere.
+
+## The Tutorial Material
+
+The tutorial material is in two directories `inst/presentations` and `inst/notebooks`. The `presentations` directory contains RMarkdowns used to generate the slides, and the `notebooks` directory contains many code samples in R Notebook format for you to play with. You can knit these files directly from withing RStudio.
+
+## Outline of the Tutorial
+
+This is going to be whirlwind tour of options for plotting spatial data using R. Instead of deep diving in to any one particular approach, the focus is going to be on gaining a broad understanding of many visualization techniques. You will be exposed to many R packages and tools and at times it may overwhelm you. But even then you will come out of this with a better understanding and appreciation of all the visualization options in R when it comes to spatial data.
+
+### Part 1: Introduction
+
+**[Slides](presentations/01-Introduction.html)**
+
+I will go over the objectives and the scope of the tutorial, introduce myself, get to know the audience a bit. We will also try and solve any last minute setup issues, in case someone has them.
+
+### Part 2: R Packages
+
+
+**[Slides](presentations/02-R_Packages.html)**
+
+In this part I will briefly go over some major R packages available for working with spatial data. We will cover R packages for data containers, reading/writing external data, spatial operations, and finally plotting spatial data.
+
+### Part 3: Spatial Data
+
+**[Slides](presentations/03-Spatial_Data.html)**
+
+Here we will go over the major R packages for storing spatial data in an R environment. We will also explore briefly some common ways to interact with spatial data stored in files/databases.
+
+### Part 4: Spatial Data Operations
+
+
+**[Slides](presentations/04-Spatial_Data_Operations.html)**
+
+Here we will explore some common spatial operations on data. This involves sub-setting, joining spatial data. Determining centroids, convex hulls, voronoi regions etc. 
+
+### Part 5: Ways to Output Maps
+
+
+**[Slides](presentations/05-Ways_to_Output_Maps.html)**
+
+In this section we will explore how to integrate maps in to your documents and applications. We will explore options for print maps in PDFs, to online  and/or interactive maps in web pages. We will also explore dynamic mapping using Shiny.
+
+### Part 6: Static Maps
+
+**[Slides](presentations/06-Static_Maps.html)**
+
+Maps that are put in documents, and web pages. Maps than can be printed out. We will explore various mapping techniques, but primarily focused on ggplot2 based techniques.
+
+### Part 7: Interactive Maps
+
+**[Slides](presentations/07-Interactive_Maps.html)**
+
+Maps meant for the web. Maps that users can interact with and explore in more details. Maps that can be changed dynamically in a Shiny application on user interaction.
+
+---
 
 In addition to the slides, you can also consult the following R Notebooks for an alternative format. Source code for these notebooks is in the same repo as above under `inst/notebooks` directory
 
 - [01-Spatial_Data.nb.html](https://bhaskarvk.github.io/user2017.geodataviz/notebooks/01-Spatial_Data.nb.html)
 - [02-Static-Maps.nb.html](https://bhaskarvk.github.io/user2017.geodataviz/notebooks/02-Static-Maps.nb.html)
+- [03-Interactive-Maps.nb.html](https://bhaskarvk.github.io/user2017.geodataviz/notebooks/03-Interactive-Maps.nb.html)
 
-#### Pre-Tutorial Setup
-
-Please do this well before the tutorial. The bandwidth at the venue could be very limited and the docker image I will be using is approximately 1.6G. The better prepared you come for the tutorial the more you will get out of it.
-
-- Install [docker](https://store.docker.com/search?type=edition&offering=community), and [docker toolbox](https://www.docker.com/products/docker-toolbox) (only for Windows and Mac).
-
-- Either using the kitematic GUI tool or command line pull the `bhaskarvk/rgeodataviz` image.<br/>Command line: `docker pull bhaskarvk/rgeodataviz`
-
-If docker is not an option [here](https://gist.github.com/bhaskarvk/32b2a03a430a04a67664b85cad89c825) is a gist of all packages that are either directly or indirectly used for this tutorial.
-
-#### Structure of the Tutorial
-
-This is going to be whirlwind tour of options for plotting spatial data using R. Instead of deep diving in to any one particular approach, the focus is going to be on gaining a broad understanding of many visualization techniques. You will be exposed to many R packages and tools and at times it may overwhelm you. But even then you will come out of this with a better understanding and appreciation of all the visualization options in R when it comes to spatial data.
-
-##### Part 1: Introduction
-
-**[Slides](presentations/01-Introduction.html)**
-
-_from_ **9:30 - 9:50**
-
-I will go over the objectives and the scope of the tutorial, introduce myself, get to know the audience a bit. We will also try and solve any last minute setup issues, in case someone has them.
-
-##### Part 2: R Packages
-
-
-**[Slides](presentations/02-R_Packages.html)**
-
-_from_ **9:50 - 10:05**
-
-In this part I will briefly go over some major R packages available for working with spatial data. We will cover R packages for data containers, reading/writing external data, spatial operations, and finally plotting spatial data.
-
-##### Part 3: Spatial Data
-
-**[Slides](presentations/03-Spatial_Data.html)**
-
-_from_ **10:05 - 10:20**
-
-Here we will go over the major R packages for storing spatial data in an R environment. We will also explore briefly some common ways to interact with spatial data stored in files/databases.
-
-##### 5 Minutes break
-
-##### Part 4: Spatial Data Operations
-
-
-**[Slides](presentations/04-Spatial_Data_Operations.html)**
-
-_from_ **10:25 - 10:40**
-
-Here we will explore some common spatial operations on data. This involves sub-setting, joining spatial data. Determining centroids, convex hulls, voronoi regions etc. 
-
-##### Part 5: Ways to Output Maps
-
-
-**[Slides](presentations/05-Ways_to_Output_Maps.html)**
-
-_from_ **10:40 - 11:00** 
-
-In this section we will explore how to integrate maps in to your documents and applications. We will explore options for print maps in PDFs, to online  and/or interactive maps in web pages. We will also explore dynamic mapping using Shiny.
-
-
-##### 30 minutes break
-
-##### Part 6: Static Maps
-
-
-**[Slides](presentations/06-Static_Maps.html)**
-
-_from_ **11:30 - 12:05**
-
-Maps that are put in documents, and web pages. Maps than can be printed out. We will explore various mapping techniques, but primarily focused on ggplot2 based techniques.
-
-##### 5 minutes break
-
-##### Part 7: Interactive Maps
-
-
-**[Slides](presentations/07-Interactive_Maps.html)**
-
-_from_ **12:10 - 12:50**
-
-Maps meant for the web. Maps that users can interact with and explore in more details. Maps that can be changed dynamically in a Shiny application on user interaction.
-
-##### Question/Answers, Discussion
-
-_from_ **12:50 - 1:00**
-
-General discussion, and question and answers.
