--- a/inst/presentations/02-R_Packages.Rmd
+++ b/inst/presentations/02-R_Packages.Rmd
@@ -105,6 +105,8 @@ library(magrittr)
 
 - [getlandsat](https://cran.r-project.org/package=getlandsat): A treasure trove of Landsat data.
 
+- [elevatr](https://cran.r-project.org/package=elevatr): Access evevation data via several web-services.
+
 --
 
 - [tigris](https://cran.r-project.org/package=tigris) / [tidycensus](https://cran.r-project.org/package=tidycensus) / [acs](https://cran.r-project.org/package=acs) / [censusapi](https://cran.r-project.org/package=censusapi): Packages for US Census Bureau Data.
