--- a/inst/index.Rmd
+++ b/inst/index.Rmd
@@ -29,11 +29,9 @@ This tutorial covers ...
 
 I will add more and more samples as time progresses so keep a tab on this repository from time to time.
 
-## Slides and R Notebooks
-
-The tutorial overview, the slides, and the R Notebooks can be found [here](https://bhaskarvk.github.io/user2017.geodataviz/).
-
 ## Installation
+
+**Note** You don't need to install anything if you just want to watch the slides. The links to the slides and R Notebook HTMLs are in the section [Slides and R Notebooks](#slides-and-r-notebooks) below.
 
 ### The Docker Way
 
@@ -106,9 +104,7 @@ Destroying the container (`docker container rm`) will delete any data or files y
 
 The tutorial material is in two directories `inst/presentations` and `inst/notebooks`. The `presentations` directory contains RMarkdowns used to generate the slides, and the `notebooks` directory contains many code samples in R Notebook format for you to play with. You can knit these files directly from withing RStudio.
 
-## Outline of the Tutorial
-
-This is going to be whirlwind tour of options for plotting spatial data using R. Instead of deep diving in to any one particular approach, the focus is going to be on gaining a broad understanding of many visualization techniques. You will be exposed to many R packages and tools and at times it may overwhelm you. But even then you will come out of this with a better understanding and appreciation of all the visualization options in R when it comes to spatial data.
+## Slides and R Notebooks
 
 ### Part 1: Introduction
 
