--- a/inst/presentations/02-R_Packages.Rmd
+++ b/inst/presentations/02-R_Packages.Rmd
@@ -105,7 +105,7 @@ library(magrittr)
 
 - [getlandsat](https://cran.r-project.org/package=getlandsat): A treasure trove of Landsat data.
 
-- [elevatr](https://cran.r-project.org/package=elevatr): Access evevation data via several web-services.
+- [elevatr](https://cran.r-project.org/package=elevatr): Access elevation data via several web-services.
 
 --
 
@@ -175,7 +175,7 @@ library(magrittr)
 
 --
 
-- [gganimate](https://github.com/dgrtwo/gganimate) / [animation](https://cran.r-project.org/package=animation): Stitch a bunch of static plots for animation. Useful for spatio-tempral data
+- [gganimate](https://github.com/dgrtwo/gganimate) / [animation](https://cran.r-project.org/package=animation): Stitch a bunch of static plots for animation. Useful for spatio-temporal data
 
 --
 
